--- a/Plotly Dash Boostrap - Quick Starter.ipynb
+++ b/Plotly Dash Boostrap - Quick Starter.ipynb
@@ -259,7 +259,7 @@
     "<img src=\"images/prog_5.png\"  >    \n",
     "    \n",
     "Let's discuss about a few new stuffs that have been added\n",
-    "><b>Line 14-32,36:</b> <code>dbc.NavbarSimple</code>, this is where we define navigation bar and menu item. You would notice that, upon clicking on \"More\", there is a dropdown menu. However, when you click on any menu items, they won't be anything happened yet. We will dicuss callback functio in the next program. You will find more navigation bar theme and style <a href='https://dash-bootstrap-components.opensource.faculty.ai/docs/components/navbar/#'><b>here<b></a><br>\n",
+    "><b>Line 14-32,36:</b> <code>dbc.NavbarSimple</code>, this is where we define navigation bar and menu item. You would notice that, upon clicking on \"More\", there is a dropdown menu. However, when you click on any menu items, they won't be anything happened yet. We will dicuss callback functio in the next program. You will find more navigation bar theme and style <a href='https://dash-bootstrap-components.opensource.faculty.ai/docs/components/navbar/#'><b>here</b></a><br>\n",
     "><b>Line 37-42:</b> <code>dbc.Container</code>, everything is the same as in previous examples, except all are encapsulated within a dash bootstrap container. Notice that, all component are aligned in the middle, with equally spaced on both sides.\n",
     "    \n",
     "To run the application, simply run this on a command prompt\n",
